additions to outline

--- a/main.tex
+++ b/main.tex
@@ -14,20 +14,20 @@ To define physical objects we should be able to experimentally tell them apart. 
 We tell physical object apart by identifying some measurable properties. In particular, we are interested in properties that are continuous quantities. This gives us manifolds.
 
 \subsection{Coordinate transformations}
-
+Physics is equally valid regardless of coordinate system. Therefore, if we can describe a physical phenomenon in one frame of reference, we should be able to convert that description into another frame of reference. 
 \subsection{Parametrizations of curves}
-
+Continuing the idea of validity in multiple views, we may describe the same line, curve, or surface with different, but generally equally valid functions
 \chapter{Mathematical representation of infinitesimal objects}
 
 \section{Differentiable manifolds and densities}
 We are interested in studying distribution on manifolds. Talk about them as a measure. The limit on infinitesimal areas is a density and requires coordinates to be differentiable.
 
 \section{Vectors and infinitesimal displacements}
-
+At any point on a manifold, we can calculate the tangent plane. An infinitesimal displacement along this plane (a directional derivative) is a vector. 
 \section{Covectors and linear functions of displacements}
-
+We can define functions that convert infinitesimal displacements to a scalar value. These functions may be 
 \section{Tensors and coordinate transformations}
-
+Some quantities can undergo one-to-one transformations between coordinate systems. In general, such quantities are tensors. 
 \section{K-forms and wedge product}
 
 \chapter{Geometry and ???}
