--- a/main.tex
+++ b/main.tex
@@ -29,12 +29,18 @@ We can define functions that convert infinitesimal displacements to a scalar val
 \section{Tensors and coordinate transformations}
 Some quantities can undergo one-to-one transformations between coordinate systems. In general, such quantities are tensors. 
 \section{K-forms and wedge product}
-
+In more abstract or complicated coordinate systems, it becomes useful to define geometry on infinitesimal displacements. 
 \chapter{Geometry and ???}
+
 \section{Riemannian geometry}
+Geometry of infinitesimal displacements is made necessary by a constantly changing metric tensor. 
 \subsection{Metric tensor}
+A tool for calculating distances/displacements along a coordinate system
 \subsection{Orthogonal basis}
+
 \section{Symplectic geometry and state spaces}
+The density of points in our system remains constant under change in position. 
+
 \subsection{Symplectic form and areas}
 
 \end{document}
