Redid bits of outline

--- a/main.tex
+++ b/main.tex
@@ -33,14 +33,15 @@ In more abstract or complicated coordinate systems, it becomes useful to define 
 \chapter{Geometry and ???}
 
 \section{Riemannian geometry}
-Geometry of infinitesimal displacements is made necessary by a constantly changing metric tensor. 
+In order to give a mathematically rigorous definition of lengths of vectors and the angle between them, we use an inner product. Vector spaces with an inner product are Riemannian. 
 \subsection{Metric tensor}
-A tool for calculating distances/displacements along a coordinate system
+The inner product itself: feed in two vectors, and the outcome is a scalar representing the lengths of the vectors and the angle between them. 
 \subsection{Orthogonal basis}
 
 \section{Symplectic geometry and state spaces}
-The density of points in our system remains constant under change in position. 
+We want to be able to represent our state configurations. Symplectic geometry arises when trying to describe their areas
 
 \subsection{Symplectic form and areas}
+Just as the metric tensor lets us define length and angles, the symplectic form lets us define areas. 
 
 \end{document}
