--- a/main.tex
+++ b/main.tex
@@ -12,7 +12,7 @@
 \textit{To define physical objects we should be able to experimentally tell them apart. This gives us a topology.}
 
 \section{Manifolds and continuous quantities}
-\textit{We tell physical object apart by identifying some measurable properties. In particular, we are interested in properties that are continuous quantities. This gives us manifolds.}
+\emph{We tell physical object apart by identifying some measurable properties. In particular, we are interested in properties that are continuous quantities. This gives us manifolds.}
 
 \subsection{Physical objects}
 
@@ -21,7 +21,7 @@ Say we have some object that we want to identify, and we have an idea in mind of
 Now imagine you get up one morning, and you want to know what the weather will be like that day in Ann Arbor, MI. You check the forecast on your phone, and see that it will be a balmy 33$^{\circ}$F. Because the report is made with only so many significant figures, the actual temperature may be anywhere between 32.1 and 33.1. So, what you actually have is a range of possible cases that you've established that the real temperature is within. Furthermore, there are many other possible ranges that your case didn't lie within. For instance, the range could have been from 0.1 to 1.1$^{\circ}$F, or 100.1 to 101.1, etc. And still further, we can see that the ranges of theoretically possible temperatures together cover between just above absolute zero and whatever maximum temperature may exist (however unlikely most of the temperatures may be outside of some very unfortunate scenario). Besides temperature, we could just so describe air pressure, humidity, wind speed, chance of snow, your whereabouts, whatever. 
 
 \subsection{Quantities}
-$\textit{In quantifying the properties that we want to study, we want to be able to compare two objects with the same "sort" of property, and maybe we also want to identify multiple parameters at the same time.}$
+\emph{In quantifying the properties that we want to study, we want to be able to compare two objects with the same "sort" of property, and maybe we also want to identify multiple parameters at the same time.}
 
 When we have a 
 \subsection{Coordinate transformations}
