Minor update on manifolds

--- a/main.tex
+++ b/main.tex
@@ -56,7 +56,7 @@ Fahrenheit, mph, percent humidity, location
 
 - \emph{Now that we have sets that can be mapped to the real numbers, we can define manifolds}
 
-For the weather example, a manifold would all possible weather conditions (including things that can't necessarily be quantified, like the color of a sunset), with a subsection whereon is defined a weather report, measuring temperature, wind speed, etc. in different places. 
+For the weather example, a manifold would all possible weather conditions (including things that can't necessarily be quantified, like the color of a sunset), with a subsection whereon is defined a weather report, measuring temperature, wind speed, etc. in different places. There will always be an uncertainty in the exact report, however small.  
  
 \begin{defn}
 	A \textbf{manifold} is a set of physical objects $X$ such that for any $x \in X$ there exists a $U \subset X$ that contains $x$ and upon which a coordinate system $\vec{q}$ is defined.
